--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -41,3 +41,23 @@
 p:hover .p-img {
     transform: translateY(-100%);
 }
+
+/********** MEDIA QUERIES **********/
+
+@media screen and (max-width: 480px) {
+   .project {
+     width: 100%;
+     margin: 0px 0px;
+     flex-direction: column;
+     text-align: center;
+     margin-top: 50px;
+   }
+
+   .p-title {
+     padding: 100px;
+     align-items: center;
+     justify-content: center;
+     text-align: center;
+   }
+  
+}
